feat/2029: renaming api route
